# vigil-pulse

./: Cargo.toml  README.md
src/: error.rs  lib.rs  util.rs
src/outcomes/: mod.rs  outcome.rs  runtime.rs  state.rs
src/pipeline/: archive.rs  calibrate.rs  checkpoint.rs  init.rs  mod.rs  nudge.rs  parser.rs  pulse.rs  review.rs  runtime.rs  scan.rs  state.rs  status.rs
src/reflection/: analyze.rs  collect.rs  init.rs  mod.rs  parser.rs  pulse.rs  runtime.rs  signals.rs  state.rs  stats.rs  status.rs
templates/: praxis-echo.md  vigil-echo.md
