[package]
name = "vigil-pulse"
version = "0.1.0"
edition = "2021"
description = "Metacognitive monitoring for AI entities — pipeline enforcement, reflection quality, outcome tracking"
license = "AGPL-3.0-only"
repository = "https://github.com/dnacenta/vigil-pulse"
keywords = ["ai", "metacognition", "monitoring", "entity", "llm"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
owo-colors = "4"

# Shared types (monitoring traits + types)
pulse-system-types = "0.5"

[dev-dependencies]
tempfile = "3"
